unpackaged/main/default/objects/SALine_Assigned_Vehicle__c/SALine_Assigned_Vehicle__c.object-meta.xml
<CustomObject>
    <description>This is used to link vehicle with Sales Agreement Lines</description>
    <label>Assigned Vehicle</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Associated Vehicle  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assigned Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>