unpackaged/main/default/objects/SALine_Assigned_Vehicle__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Associated Vehicles</relationshipLabel>
    <relationshipName>Associated_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>