unpackaged/main/default/objects/SALine_Assigned_Vehicle__c/fields/Account_Site__c.field-meta.xml
<CustomField>
    <fullName>Account_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Site</label>
    <referenceTo>ETSALES_Account_Sites__c</referenceTo>
    <relationshipLabel>Associated Vehicles</relationshipLabel>
    <relationshipName>Associated_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>