unpackaged/main/default/objects/SALine_Assigned_Vehicle__c/fields/Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>