unpackaged/main/default/objects/SALine_Assigned_Vehicle__c/fields/Assign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Assign_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assign Start Date</label>
    <type>DateTime</type>
</CustomField>