unpackaged/main/default/objects/SALine_Assigned_Vehicle__c/fields/Contract_Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Oracle_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Oracle ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>