unpackaged/main/default/objects/SALine_Assigned_Vehicle__c/fields/ET_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ET Vehicle</label>
    <referenceTo>Vehicle_Master__c</referenceTo>
    <relationshipLabel>Assigned Vehicles</relationshipLabel>
    <relationshipName>Assigned_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>