unpackaged/main/default/objects/SALine_Assigned_Vehicle__c/fields/Plate_Code__c.field-meta.xml
<CustomField>
    <fullName>Plate_Code__c</fullName>
    <formula>ET_Vehicle__r.Plate_colour_code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plate Code</label>
    <type>Text</type>
</CustomField>