unpackaged/main/default/objects/SALine_Assigned_Vehicle__c/fields/Plate_Source__c.field-meta.xml
<CustomField>
    <fullName>Plate_Source__c</fullName>
    <formula>ET_Vehicle__r.Plate_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plate Source</label>
    <type>Text</type>
</CustomField>