unpackaged/main/default/objects/SALine_Assigned_Vehicle__c/fields/Ref_ID__c.field-meta.xml
<CustomField>
    <fullName>Ref_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ref ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>