unpackaged/main/default/objects/SALine_Assigned_Vehicle__c/fields/Sales_Agreement_Sub_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement_Sub_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement Line</label>
    <referenceTo>ET_Sales_Agreement_Sub_Line_Item__c</referenceTo>
    <relationshipLabel>Assigned Vehicles</relationshipLabel>
    <relationshipName>Associated_Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>