unpackaged/main/default/objects/SALine_Assigned_Vehicle__c/fields/Sub_Line__c.field-meta.xml
<CustomField>
    <fullName>Sub_Line__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Line</label>
    <length>100</length>
    <type>Text</type>
</CustomField>