unpackaged/main/default/objects/SALine_Assigned_Vehicle__c/fields/Vehicle_Description__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Description__c</fullName>
    <formula>ET_Vehicle__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Description</label>
    <type>Text</type>
</CustomField>