unpackaged/main/default/objects/SALine_Assigned_Vehicle__c/fields/Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Number__c</fullName>
    <formula>ET_Vehicle__r.Internal_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Number</label>
    <type>Text</type>
</CustomField>