unpackaged/main/default/objects/SALine_Assigned_Vehicle__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <formula>ET_Vehicle__r.Vehicle_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Type</label>
    <type>Text</type>
</CustomField>