unpackaged/main/default/objects/SALine_Assigned_Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Vehicle_Status__c</columns>
    <columns>Assign_Start_Date__c</columns>
    <columns>Assign_End_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>